Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42119

Warning while building qrc-generated files on gcc

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.4.0 RC
    • 5.3.2
    • Build tools: rcc
    • None
    • gcc 4.9
    • e859de3fb5203579fbb4a6774bcdf59dc00404f9

      Additional building flag: -Wmissing-declarations
      Warning:
      no previous declaration for ‘int qInitResources_ResourceName()’
      no previous declaration for ‘int qCleanupResources_ResourceName()’
      Possible fix: add "static" before generated function, i.e. change
      int QT_MANGLE_NAMESPACE(qInitResources_ResourceName)()
      to
      static int QT_MANGLE_NAMESPACE(qInitResources_ResourceName)()

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hjk hjk
            woodroof Danil Ilinykh
            Votes:
            3 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes